# tempo_forge_ai

./: .dockerignore  .env.example  .env.staging.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: config.rs  cors.rs  main.rs  state.rs
apps/api/src/middleware/: auth.rs  metrics.rs  mod.rs  request_id.rs  security_headers.rs
apps/api/src/repositories/: conversations.rs  deployments.rs  mod.rs
apps/api/src/routes/: ai.rs  analytics.rs  audit.rs  billing.rs  deployments.rs  explorer.rs  health.rs  keys.rs  metrics.rs  mod.rs  projects.rs  sdk.rs  secrets.rs
apps/api/src/services/: metrics.rs  mod.rs  rate_limit.rs  stripe.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/web/: next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/app/blog/[slug]/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/analytics/: page.tsx
apps/web/src/app/dashboard/assistant/: page.tsx
apps/web/src/app/dashboard/auditor/: page.tsx
apps/web/src/app/dashboard/billing/: page.tsx
apps/web/src/app/dashboard/contracts/: page.tsx
apps/web/src/app/dashboard/deployments/: page.tsx
apps/web/src/app/dashboard/explorer/: page.tsx
apps/web/src/app/dashboard/projects/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/docs/api/: page.tsx
apps/web/src/app/docs/getting-started/: page.tsx
apps/web/src/app/docs/tempo/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/dashboard/: command-palette.tsx  sidebar.tsx  topbar.tsx
apps/web/src/components/landing/: hero.tsx  site-header.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/hooks/: use-authed-api.ts
apps/web/src/lib/: api.ts  auth-token.ts  utils.ts
apps/web/src/store/: ui.ts
contracts/: README.md  foundry.toml
contracts/script/: DeployTempoForgeToken.s.sol
contracts/src/: TempoForgeToken.sol
contracts/test/: TempoForgeToken.t.sol
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs  types.rs
crates/ai-engine/src/agents/: auditor.rs  chat.rs  codegen.rs  debugger.rs  docs.rs  mod.rs  orchestrator.rs  planner.rs  tests_agent.rs  traits.rs
crates/ai-engine/src/memory/: mod.rs
crates/ai-engine/src/prompts/: mod.rs
crates/ai-engine/src/providers/: mod.rs  openai_compatible.rs
crates/ai-engine/src/rag/: embed.rs  mod.rs  qdrant.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  claims.rs  clerk.rs  lib.rs  rbac.rs  secrets.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: client.rs  lib.rs  tip20.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  ids.rs  lib.rs  pagination.rs  response.rs  time.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/explorer/: Cargo.toml
crates/explorer/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/sdk-generator/: Cargo.toml
crates/sdk-generator/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: detectors.rs  lib.rs  report.rs
docs/: ARCHITECTURE.md  AUTH_BILLING.md  GETTING_STARTED.md  INDEXER_RAG.md  SECURITY_OPS.md  STAGING_DEPLOY.md
infrastructure/docker/: Dockerfile.api  Dockerfile.web  docker-compose.staging.yml  docker-compose.yml
infrastructure/fly/: fly.api.toml  fly.web.toml
infrastructure/railway/: railway.toml
migrations/: 0001_init.sql  0002_indexer.sql  0003_secrets_apikeys_index.sql
scripts/: deploy-check.sh  setup.sh
