[package]
name = "tempoforge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TempoForge AI HTTP API"

[[bin]]
name = "tempoforge-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[dependencies]
tempoforge-common.workspace = true
tempoforge-auth.workspace = true
tempoforge-ai-engine.workspace = true
tempoforge-blockchain.workspace = true
tempoforge-explorer.workspace = true
tempoforge-analytics.workspace = true
tempoforge-deployment.workspace = true
tempoforge-security.workspace = true
tempoforge-sdk-generator.workspace = true
tempoforge-indexer.workspace = true

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
blake3.workspace = true
parking_lot.workspace = true
hmac.workspace = true
sha2.workspace = true
bytes.workspace = true
