[package]
name = "tempoforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TempoForge AI command-line interface"

[[bin]]
name = "tempoforge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
