[package]
name = "tempoforge-ai-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Modular AI agent orchestration, LLM providers, prompts, and RAG"

[dependencies]
tempoforge-common.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true
