[package]
name = "tempoforge-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chain and product analytics aggregations"

[dependencies]
tempoforge-common.workspace = true
tempoforge-blockchain.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
