[package]
name = "tempoforge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Clerk JWT validation, RBAC, and API key authentication"

[dependencies]
tempoforge-common.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
rand.workspace = true
secrecy.workspace = true
