[package]
name = "tempoforge-blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tempo Blockchain RPC client and chain helpers"

[dependencies]
tempoforge-common.workspace = true
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
