[package]
name = "tempoforge-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and utilities for TempoForge AI"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
axum.workspace = true
http = "1"
tracing.workspace = true
