[package]
name = "tempoforge-explorer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tempo block explorer query services"

[dependencies]
tempoforge-common.workspace = true
tempoforge-blockchain.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
